--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
     .story-card ul{list-style:none; padding:0; margin:0; display:flex; flex-direction:column; gap:14px}
     .story-card li{border:2px solid var(--mocha); border-radius:16px; padding:12px 16px; font-size:1rem; font-weight:600; line-height:1.5; background:#fff; transition:.2s}
     .story-card li:hover{background:var(--bg)}
+    .hashtags {
+      margin-top: 12px;
+      font-size: .9rem;
+      color: var(--sub);
+      line-height: 1.6;
+    }
+    .hashtags span {
+      display: inline-block;
+      margin-right: 8px;
+      color: var(--mocha);
+      font-weight: 600;
+    }
 
     /* Projects */
     .projects h2{margin:0; font-size:1.7rem; font-weight:900; letter-spacing:-.01em}
@@ -130,36 +142,17 @@
         <div class="card-top"><span>PROJECT PAW</span><span class="dots">● ● ●</span></div>
         <h2>"선함엔 기준이 필요해"</h2>
         <ul>
-          <li>✓ 구조자는 30% 직접 부담 (도덕적헤이방지)</li>
-          <li>✓ 후원금은 병원에 바로 지급 (개발 중)</li>
-          <li>✓ 후기와 치료 전후 변화 공유</li>
-          <li>✓ 치료영수증 업로드 필수</li>
+          <li>✓ 구조자가 30% 직접 부담 (책임 있는 구조 설계)</li>
+          <li>✓ 모금액은 전액 전달 (PG 연결 전까지 단톡방, 수수료는 PAW 부담)</li>
+          <li>✓ 치료 전·후 변화와 후기 공유</li>
+          <li>✓ 영수증 업로드 필수</li>
         </ul>
-      </div>
-
-      <!-- Card 3 -->
-      <div class="story-card">
-        <div class="card-top"><span>PROJECT PAW</span><span class="dots">● ● ●</span></div>
-        <h2>고양이보다 부드럽게,<br/>해파리보다 투명하게.</h2>
-        <ul>
-          <li>✓ 구조자·후원자 실시간 소통</li>
-          <li>✓ 지역별 PAW 병원 (구조병원 LIST) (개발 중)</li>
-          <li>✓ 모금액 전액 전달 (PG연결 전까지 단톡방 연결)</li>
-          <li>✓ 100% 재능기부 운영 플랫폼</li>
-          <li>✓ 한 없이 투명에 가까운 PAW</li>
-        </ul>
-      </div>
-
-      <!-- Card 4 -->
-      <div class="story-card">
-        <div class="card-top"><span>PROJECT PAW</span><span class="dots">● ● ●</span></div>
-        <h2>함께하자, 등록해줘, 연결할게</h2>
-        <ul>
-          <li>✓ 병원비 증빙이 있는 구조 활동</li>
-          <li>✓ 국가지원 제외된 중성화 수술</li>
-          <li>✓ 입양 직후 검진·예방 접종</li>
-          <li>✓ 투명한 영수증이 있는 경우라면 언제든</li>
-        </ul>
+        <div class="hashtags">
+          <span>#유기동물치료비</span>
+          <span>#중성화수술</span>
+          <span>#입양직후검진/예방</span>
+          <span>#투명한구조활동</span>
+        </div>
       </div>
     </div>
   </section>
