--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <style>
     :root{
       --ink:#111;
-      --sub:#444;
-      --muted:#777;
+      --sub:#555;
+      --muted:#888;
       --line:#eaeaea;
       --bg:#F4F1EE;        /* Gardenia */
       --card:#fff;
@@ -53,7 +53,7 @@
     .story-card h2{font-size:1.5rem; font-weight:900; margin:0 0 20px; line-height:1.4; color:var(--mocha)}
     .story-card p{font-size:1.05rem; line-height:1.7; margin:0 0 20px; color:var(--ink)}
     .story-card ul{list-style:none; padding:0; margin:0; display:flex; flex-direction:column; gap:14px}
-    .story-card li{border:2px solid var(--mocha); border-radius:16px; padding:12px 16px; font-size:1rem; font-weight:600; line-height:1.5; background:#fff; transition:.2s}
+    .story-card li{border:2px solid var(--mocha); border-radius:16px; padding:12px 16px; font-size:1rem; font-weight:600; line-height:1.5; background:#fff; transition:.2s; color:var(--ink)}
     .story-card li:hover{background:var(--bg)}
     .hashtags {
       margin-top: 12px;
@@ -69,12 +69,12 @@
     }
 
     /* Projects */
-    .projects h2{margin:0; font-size:1.7rem; font-weight:900; letter-spacing:-.01em}
+    .projects h2{margin:0; font-size:1.7rem; font-weight:900; letter-spacing:-.01em; color:var(--mocha)}
     .projects .header{display:flex; justify-content:space-between; align-items:center; margin-bottom:24px}
     .grid{
       display:grid;
       grid-template-columns:repeat(auto-fill,minmax(280px,1fr));
-      gap:28px; /* 기존 20px → 넉넉하게 */
+      gap:28px;
     }
     .project-card{
       display:flex; flex-direction:column;
@@ -91,18 +91,19 @@
       padding:4px 8px; border-radius:8px; font-size:.8rem
     }
     .project-card .body{
-      padding:20px; /* 기존 14px → 넉넉하게 */
+      padding:20px;
     }
-    .project-card h3{margin:0 0 10px; font-size:1.2rem; font-weight:700}
+    .project-card h3{margin:0 0 10px; font-size:1.2rem; font-weight:700; color:var(--mocha)}
     .project-card .summary{
       margin:0 0 16px; font-size:.95rem; color:var(--sub);
       line-height:1.4; max-height:2.7em; overflow:hidden
     }
     .progress{background:#eee; border-radius:6px; overflow:hidden; height:8px; margin-bottom:8px}
     .progress .bar{background:var(--mocha); height:100%}
-    .stats{display:flex; justify-content:space-between; font-size:.85rem; color:var(--muted); margin-bottom:14px}
+    .stats{display:flex; justify-content:space-between; font-size:.85rem; color:var(--sub); margin-bottom:14px}
     .rescuer{display:flex; align-items:center; gap:6px; font-size:.9rem; font-weight:600; color:var(--ink)}
     .rescuer .avatar{font-size:1rem}
+    .muted{color:var(--muted)}
     @media (max-width:768px){
       .grid{grid-template-columns:1fr; gap:24px}
       .project-card img{height:160px}
