--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       margin:0 0 24px;
       font-size:3rem;
       font-weight:900;
-      line-height:1.3;
+      line-height:1.25;
       letter-spacing:-.02em;
       color:var(--mocha);
     }
@@ -46,31 +46,48 @@
     @media (max-width:768px){.card-grid{grid-template-columns:1fr}}
     .story-card{
       background:#fff; border:2px solid var(--mocha); border-radius:20px;
-      padding:32px 26px; text-align:left; box-shadow:0 6px 14px rgba(0,0,0,.06);
+      padding:36px 28px; text-align:left; box-shadow:0 6px 14px rgba(0,0,0,.06);
       display:flex; flex-direction:column; justify-content:flex-start;
     }
-    .card-top{display:flex; justify-content:space-between; align-items:center; font-size:.95rem; font-weight:700; margin-bottom:12px; color:var(--mocha); padding-bottom:8px; border-bottom:1px solid var(--line)}
-    .story-card h2{font-size:1.5rem; font-weight:900; margin:0 0 20px; line-height:1.4; color:var(--mocha)}
-    .story-card p{font-size:1.05rem; line-height:1.7; margin:0 0 20px; color:var(--ink)}
-    .story-card ul{list-style:none; padding:0; margin:0; display:flex; flex-direction:column; gap:14px}
-    .story-card li{border:2px solid var(--mocha); border-radius:16px; padding:12px 16px; font-size:1rem; font-weight:600; line-height:1.5; background:#fff; transition:.2s; color:var(--ink)}
+    .card-top{
+      display:flex; justify-content:space-between; align-items:center;
+      font-size:.95rem; font-weight:700; margin-bottom:14px; color:var(--mocha);
+      padding-bottom:10px; border-bottom:1px solid var(--line)
+    }
+    .story-card h2{
+      font-size:1.7rem; font-weight:800; margin:0 0 22px; line-height:1.4; color:var(--mocha)
+    }
+    .story-card p{
+      font-size:1.1rem; line-height:1.8; margin:0 0 22px; color:var(--ink); font-weight:400
+    }
+    .story-card ul{
+      list-style:none; padding:0; margin:0; display:flex; flex-direction:column; gap:14px
+    }
+    .story-card li{
+      border:2px solid var(--mocha); border-radius:14px;
+      padding:12px 16px; font-size:1rem; font-weight:600; line-height:1.6;
+      background:#fff; transition:.2s; color:var(--ink)
+    }
     .story-card li:hover{background:var(--bg)}
     .hashtags {
-      margin-top: 12px;
-      font-size: .9rem;
+      margin-top: 14px;
+      font-size: .95rem;
       color: var(--sub);
       line-height: 1.6;
+      font-weight:500;
     }
     .hashtags span {
       display: inline-block;
-      margin-right: 8px;
+      margin-right: 10px;
       color: var(--mocha);
-      font-weight: 600;
+      font-weight: 700;
     }
 
     /* Projects */
-    .projects h2{margin:0; font-size:1.7rem; font-weight:900; letter-spacing:-.01em; color:var(--mocha)}
-    .projects .header{display:flex; justify-content:space-between; align-items:center; margin-bottom:24px}
+    .projects h2{
+      margin:0; font-size:1.9rem; font-weight:900; letter-spacing:-.01em; color:var(--mocha)
+    }
+    .projects .header{display:flex; justify-content:space-between; align-items:center; margin-bottom:28px}
     .grid{
       display:grid;
       grid-template-columns:repeat(auto-fill,minmax(280px,1fr));
@@ -84,30 +101,38 @@
     }
     .project-card:hover{transform:translateY(-3px); box-shadow:0 6px 16px rgba(0,0,0,.1)}
     .project-card .thumb{position:relative}
-    .project-card .thumb img{width:100%; height:180px; object-fit:cover}
+    .project-card .thumb img{width:100%; height:190px; object-fit:cover}
     .project-card .badge{
-      position:absolute; bottom:8px; left:8px;
-      background:rgba(0,0,0,0.6); color:#fff;
-      padding:4px 8px; border-radius:8px; font-size:.8rem
+      position:absolute; bottom:10px; left:10px;
+      background:rgba(0,0,0,0.65); color:#fff;
+      padding:5px 10px; border-radius:8px; font-size:.85rem; font-weight:600
     }
     .project-card .body{
-      padding:20px;
+      padding:22px;
     }
-    .project-card h3{margin:0 0 10px; font-size:1.2rem; font-weight:700; color:var(--mocha)}
+    .project-card h3{
+      margin:0 0 12px; font-size:1.35rem; font-weight:800; color:var(--ink)
+    }
     .project-card .summary{
-      margin:0 0 16px; font-size:.95rem; color:var(--sub);
-      line-height:1.4; max-height:2.7em; overflow:hidden
+      margin:0 0 18px; font-size:1.05rem; color:var(--sub);
+      line-height:1.6; max-height:3.2em; overflow:hidden; font-weight:400
     }
-    .progress{background:#eee; border-radius:6px; overflow:hidden; height:8px; margin-bottom:8px}
+    .progress{background:#eee; border-radius:6px; overflow:hidden; height:8px; margin-bottom:10px}
     .progress .bar{background:var(--mocha); height:100%}
-    .stats{display:flex; justify-content:space-between; font-size:.85rem; color:var(--sub); margin-bottom:14px}
-    .rescuer{display:flex; align-items:center; gap:6px; font-size:.9rem; font-weight:600; color:var(--ink)}
+    .stats{
+      display:flex; justify-content:space-between;
+      font-size:.9rem; color:var(--sub); margin-bottom:16px; font-weight:500
+    }
+    .rescuer{
+      display:flex; align-items:center; gap:8px;
+      font-size:.95rem; font-weight:700; color:var(--ink)
+    }
     .rescuer .avatar{font-size:1rem}
     .muted{color:var(--muted)}
     @media (max-width:768px){
       .grid{grid-template-columns:1fr; gap:24px}
       .project-card img{height:160px}
-      .project-card h3{font-size:1.25rem}
+      .project-card h3{font-size:1.3rem}
       .project-card .summary{font-size:1rem}
       .stats{font-size:.9rem}
     }
