--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
   <title>Project.PAW — 개인과 개인을 잇는 후원 플랫폼</title>
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
-  <!-- SUIT Variable 폰트 -->
   <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet" />
   <style>
     :root{
-      --ink:#111;       /* 기본 텍스트 Black */
-      --sub:#555;       /* 보조 Gray */
-      --accent:#E87722; /* Pantone 16-1359 Accent (포인트 전용) */
+      --ink:#111;
+      --sub:#555;
+      --accent:#E87722; /* Pantone 16-1359 */
       --line:#eaeaea;
       --bg:#fff;
     }
@@ -41,7 +40,7 @@
       position:absolute;
       left:0; bottom:-8px;
       width:100%; height:14px;
-      background:var(--accent); /* 오렌지는 포인트 highlight */
+      background:var(--accent);
       z-index:-1;
       border-radius:4px;
     }
@@ -55,66 +54,34 @@
       padding:40px 30px; text-align:left; box-shadow:0 6px 14px rgba(0,0,0,.06);
       display:flex; flex-direction:column;
     }
-    .card-top{
-      display:flex; justify-content:space-between; align-items:center;
-      font-size:1rem; font-weight:700; margin-bottom:16px; color:var(--accent);
-      padding-bottom:12px; border-bottom:1px solid var(--line)
-    }
+    .card-top{display:flex; justify-content:space-between; align-items:center; font-size:1rem; font-weight:700; margin-bottom:16px; color:var(--accent); padding-bottom:12px; border-bottom:1px solid var(--line)}
     .story-card h2{font-size:1.9rem; font-weight:800; margin:0 0 24px; line-height:1.4; color:var(--ink)}
-    .story-card p{font-size:1.15rem; line-height:1.8; margin:0 0 24px; color:var(--ink); font-weight:400}
+    .story-card p{font-size:1.15rem; line-height:1.8; margin:0 0 24px; color:var(--ink)}
     .story-card ul{list-style:none; padding:0; margin:0; display:flex; flex-direction:column; gap:16px}
-    .story-card li{
-      border:2px solid var(--accent); border-radius:14px;
-      padding:14px 18px; font-size:1.05rem; font-weight:600; line-height:1.6;
-      background:#fff; color:var(--ink)
-    }
+    .story-card li{border:2px solid var(--accent); border-radius:14px; padding:14px 18px; font-size:1.05rem; font-weight:600; background:#fff; color:var(--ink)}
     .story-card li:hover{background:#fafafa}
-    .hashtags {margin-top:16px;font-size:1rem;color:var(--sub);line-height:1.6;font-weight:500}
-    .hashtags span {display:inline-block;margin-right:10px;color:var(--accent);font-weight:700}
+    .hashtags{margin-top:16px;font-size:1rem;color:var(--sub);line-height:1.6;font-weight:500}
+    .hashtags span{display:inline-block;margin-right:10px;color:var(--accent);font-weight:700}
 
     /* Projects */
-    .projects h2{
-      margin:0;
-      font-size:2rem;
-      font-weight:900;
-      color:var(--ink); /* 블랙으로 변경 */
-    }
+    .projects h2{margin:0;font-size:2rem;font-weight:900;color:var(--ink)}
     .projects .header{display:flex;justify-content:space-between;align-items:center;margin-bottom:32px}
     .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:32px}
-    .project-card{
-      display:flex;flex-direction:column;
-      background:#fff;border:1px solid var(--line);
-      border-radius:16px;overflow:hidden;
-      transition:.2s;text-decoration:none;color:inherit;
-    }
+    .project-card{display:flex;flex-direction:column;background:#fff;border:1px solid var(--line);border-radius:16px;overflow:hidden;transition:.2s;text-decoration:none;color:inherit}
     .project-card:hover{transform:translateY(-3px);box-shadow:0 6px 16px rgba(0,0,0,.1)}
-    .project-card .thumb{position:relative}
-    .project-card .thumb img{width:100%;height:200px;object-fit:cover}
-    .project-card .badge{
-      position:absolute;bottom:12px;left:12px;
-      background:var(--accent);color:#fff;
-      padding:6px 12px;border-radius:8px;font-size:.9rem;font-weight:600
-    }
-    .project-card .body{padding:24px}
-    .project-card h3{margin:0 0 14px;font-size:1.4rem;font-weight:800;color:var(--ink)}
-    .project-card .summary{
-      margin:0 0 20px;font-size:1.1rem;color:var(--sub);
-      line-height:1.6;max-height:3.4em;overflow:hidden;font-weight:400
-    }
+    .thumb{position:relative}
+    .thumb img{width:100%;height:200px;object-fit:cover}
+    .badge{position:absolute;bottom:12px;left:12px;background:var(--accent);color:#fff;padding:6px 12px;border-radius:8px;font-size:.9rem;font-weight:600}
+    .body{padding:24px}
+    h3{margin:0 0 14px;font-size:1.4rem;font-weight:800;color:var(--ink)}
+    .summary{margin:0 0 20px;font-size:1.1rem;color:var(--sub);line-height:1.6;max-height:3.4em;overflow:hidden}
     .progress{background:#eee;border-radius:6px;overflow:hidden;height:10px;margin-bottom:12px}
     .progress .bar{background:var(--accent);height:100%}
-    .stats{display:flex;justify-content:space-between;font-size:1rem;color:var(--sub);margin-bottom:18px;font-weight:500}
+    .stats{display:flex;justify-content:space-between;font-size:1rem;color:var(--sub);margin-bottom:18px}
     .stats span strong{font-size:1.15rem;font-weight:800;color:var(--ink);margin-left:4px}
     .rescuer{display:flex;align-items:center;gap:8px;font-size:1rem;font-weight:700;color:var(--ink)}
     .rescuer .avatar{font-size:1.1rem}
     .muted{color:#888}
-    @media (max-width:768px){
-      .grid{grid-template-columns:1fr;gap:24px}
-      .project-card img{height:170px}
-      .project-card h3{font-size:1.3rem}
-      .project-card .summary{font-size:1rem}
-      .stats{font-size:.95rem}
-    }
   </style>
 </head>
 <body>
@@ -128,9 +95,10 @@
     </div>
   </section>
 
-  <!-- Story Cards -->
+  <!-- Story Cards (2개만 유지) -->
   <section class="story-cards">
     <div class="container card-grid">
+      <!-- Card 1 -->
       <div class="story-card">
         <div class="card-top"><span>PROJECT PAW</span><span class="dots">● ● ●</span></div>
         <h2>우리가 시작한 이유</h2>
@@ -147,6 +115,7 @@
         </ul>
       </div>
 
+      <!-- Card 2 -->
       <div class="story-card">
         <div class="card-top"><span>PROJECT PAW</span><span class="dots">● ● ●</span></div>
         <h2>"선함엔 기준이 필요해"</h2>
@@ -188,51 +157,45 @@
 
     injectLayout({ active:'home' });
 
-    const $grid = document.getElementById('projects-grid');
-    const fmt = n => Number(n||0).toLocaleString('ko-KR');
-    const cover = (p) =>
-      p.representativeImageUrl || p.coverUrl ||
-      (Array.isArray(p.galleryUrls) && p.galleryUrls[0]) ||
-      (Array.isArray(p.images) && p.images[0]) ||
-      p.image || p.thumbnailUrl || 'img/placeholder.svg';
+    const $grid=document.getElementById('projects-grid');
+    const fmt=n=>Number(n||0).toLocaleString('ko-KR');
+    const cover=p=>
+      p.representativeImageUrl||p.coverUrl||
+      (Array.isArray(p.galleryUrls)&&p.galleryUrls[0])||
+      (Array.isArray(p.images)&&p.images[0])||
+      p.image||p.thumbnailUrl||'img/placeholder.svg';
 
     async function render(){
-      try {
-        const list = await apiListProjects({ status:'approved', limit:12 });
+      try{
+        const list=await apiListProjects({status:'approved',limit:12});
         if(!list.length){
-          $grid.innerHTML = '<div class="muted">아직 승인된 프로젝트가 없습니다.</div>';
+          $grid.innerHTML='<div class="muted">아직 승인된 프로젝트가 없습니다.</div>';
           return;
         }
-        $grid.innerHTML = list.map(p => `
+        $grid.innerHTML=list.map(p=>`
           <a class="project-card" href="project.html?id=${encodeURIComponent(p.id)}">
             <div class="thumb">
               <img src="${cover(p)}" alt=""/>
-              <span class="badge">${p.status === 'approved' ? '진행중' : '대기중'}</span>
+              <span class="badge">${p.status==='approved'?'진행중':'대기중'}</span>
             </div>
             <div class="body">
-              <h3>${p.name ?? '(이름 없음)'}</h3>
-              <p class="summary">${p.summary ?? ''}</p>
-              <div class="progress">
-                <div class="bar" style="width:${Math.min(100, Math.round((p.currentAmount||0)/p.goalAmount*100))}%"></div>
-              </div>
+              <h3>${p.name??'(이름 없음)'}</h3>
+              <p class="summary">${p.summary??''}</p>
+              <div class="progress"><div class="bar" style="width:${Math.min(100,Math.round((p.currentAmount||0)/p.goalAmount*100))}%"></div></div>
               <div class="stats">
                 <span>목표<strong>${fmt(p.goalAmount)}</strong>원</span>
                 <span>달성<strong>${fmt(p.currentAmount||0)}</strong>원</span>
-                <span>참여자<strong>${p.supporterCount ?? 0}</strong>명</span>
+                <span>참여자<strong>${p.supporterCount??0}</strong>명</span>
               </div>
-              <div class="rescuer">
-                <span class="avatar">🐾</span>
-                <span class="name">${p.rescuerName ?? '익명 구조자'}</span>
-              </div>
+              <div class="rescuer"><span class="avatar">🐾</span><span class="name">${p.rescuerName??'익명 구조자'}</span></div>
             </div>
           </a>
         `).join('');
-      } catch (e) {
+      }catch(e){
         console.error(e);
-        $grid.innerHTML = '<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
+        $grid.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
       }
     }
-
     render();
   </script>
 </body>
