--- a/project_list.html
+++ b/project_list.html
@@ -6,12 +6,12 @@
   <title>프로젝트 목록 - Project.PAW</title>
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
-  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
   <style>
     :root{
       --ink:#111;
       --sub:#555;
-      --accent:#E87722; /* 포인트 전용 */
+      --accent:#E87722; /* Pantone 16-1359 */
       --line:#eaeaea;
       --bg:#fff;
     }
@@ -30,11 +30,8 @@
     .project-card:hover{transform:translateY(-3px);box-shadow:0 6px 16px rgba(0,0,0,.1)}
     .thumb{position:relative}
     .thumb img{width:100%;height:200px;object-fit:cover}
-    .badge{
-      position:absolute;bottom:12px;left:12px;
-      background:var(--accent);color:#fff;font-size:.9rem;
-      font-weight:600;padding:6px 12px;border-radius:8px
-    }
+    .badge{position:absolute;bottom:12px;left:12px;background:var(--accent);color:#fff;
+      padding:6px 12px;border-radius:8px;font-size:.9rem;font-weight:600}
     .body{padding:24px}
     h3{margin:0 0 14px;font-size:1.4rem;font-weight:800;color:var(--ink)}
     .summary{margin:0 0 20px;font-size:1.05rem;color:var(--sub);line-height:1.6;max-height:3.4em;overflow:hidden}
@@ -66,39 +63,53 @@
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { apiListProjects } from './js/api.js';
+    import { getDownloadURL } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-storage.js";
+    import { storageRef } from './js/firebase.js';
 
     injectLayout({ active:'projects' });
 
     const $grid=document.getElementById('projects-grid');
     const fmt=n=>Number(n||0).toLocaleString('ko-KR');
-    const cover=p=>p.representativeImageUrl||p.coverUrl||(Array.isArray(p.images)&&p.images[0])||'img/placeholder.svg';
 
     async function render(){
       try{
-        const list=await apiListProjects({status:'approved',limit:30});
+        const list=await apiListProjects({status:'all',limit:30});
         if(!list.length){
-          $grid.innerHTML='<div class="muted">아직 승인된 프로젝트가 없습니다.</div>';
+          $grid.innerHTML='<div class="muted">아직 등록된 프로젝트가 없습니다.</div>';
           return;
         }
-        $grid.innerHTML=list.map(p=>`
-          <a class="project-card" href="project.html?id=${encodeURIComponent(p.id)}">
-            <div class="thumb">
-              <img src="${cover(p)}" alt=""/>
-              <span class="badge">${p.status==='approved'?'진행중':'대기중'}</span>
-            </div>
-            <div class="body">
-              <h3>${p.name??'(이름 없음)'}</h3>
-              <p class="summary">${p.summary??''}</p>
-              <div class="progress"><div class="bar" style="width:${Math.min(100,Math.round((p.currentAmount||0)/p.goalAmount*100))}%"></div></div>
-              <div class="stats">
-                <span>목표<strong>${fmt(p.goalAmount)}</strong>원</span>
-                <span>달성<strong>${fmt(p.currentAmount||0)}</strong>원</span>
-                <span>참여자<strong>${p.supporterCount??0}</strong>명</span>
+        const cards=await Promise.all(list.map(async p=>{
+          let imageUrl='img/placeholder.svg';
+          if(p.representativeImagePath){
+            try{imageUrl=await getDownloadURL(storageRef(p.representativeImagePath));}catch(e){}
+          }
+          return `
+            <a class="project-card" href="project.html?id=${encodeURIComponent(p.id)}">
+              <div class="thumb">
+                <img src="${imageUrl}" alt=""/>
+                <span class="badge">${p.adminApproved?'진행중':'대기중'}</span>
               </div>
-              <div class="rescuer"><span class="avatar">🐾</span><span>${p.rescuerName??'익명 구조자'}</span></div>
-            </div>
-          </a>
-        `).join('');
+              <div class="body">
+                <h3>${p.name??'(이름 없음)'}</h3>
+                <p class="summary">${p.summary??''}</p>
+                <div class="progress"><div class="bar" style="width:${Math.min(100,Math.round((p.currentAmount||0)/p.goalAmount*100))}%"></div></div>
+                <div class="stats">
+                  <span>목표<strong>${fmt(p.goalAmount)}</strong>원</span>
+                  <span>달성<strong>${fmt(p.currentAmount||0)}</strong>원</span>
+                  <span>참여자<strong>${p.supporterCount??0}</strong>명</span>
+                </div>
+                <div class="rescuer"><span class="avatar">🐾</span><span>${p.rescuerName??'익명 구조자'}</span></div>
+              </div>
+            </a>
+          `;
+        }));
+        $grid.innerHTML=cards.join('');
       }catch(e){
         console.error(e);
         $grid.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';
+      }
+    }
+    render();
+  </script>
+</body>
+</html>
