--- a/project.html
+++ b/project.html
@@ -6,7 +6,7 @@
   <title>프로젝트 상세 - Project.PAW</title>
   <link rel="stylesheet" href="common.css"/>
   <link rel="stylesheet" href="app.min.css"/>
-  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
   <style>
     :root{
       --ink:#111;
@@ -22,14 +22,16 @@
     h1{font-size:2rem;font-weight:900;margin:20px 0;color:var(--ink)}
     h2{font-size:1.3rem;font-weight:800;margin:32px 0 16px;color:var(--ink)}
 
-    .hero{padding:40px 0;text-align:center}
+    .hero{text-align:center;padding:40px 0}
     .hero img{max-width:100%;border-radius:16px;margin-bottom:20px}
-    .badge{display:inline-block;background:var(--accent);color:#fff;padding:6px 12px;border-radius:8px;font-size:.9rem;font-weight:600;margin-bottom:12px}
+    .badge{display:inline-block;background:var(--accent);color:#fff;
+      padding:6px 12px;border-radius:8px;font-size:.9rem;font-weight:600;margin-bottom:12px}
     .progress{background:#eee;border-radius:6px;overflow:hidden;height:12px;margin:16px 0}
     .progress .bar{background:var(--accent);height:100%}
     .stats{display:flex;justify-content:space-between;font-size:.95rem;color:var(--sub);margin-bottom:18px}
     .stats span strong{font-size:1.15rem;font-weight:800;color:var(--ink);margin-left:4px}
-    .btn-primary{display:inline-block;background:var(--accent);color:#fff;padding:12px 20px;border-radius:10px;font-weight:700;text-decoration:none;margin-top:16px}
+    .btn-primary{display:inline-block;background:var(--accent);color:#fff;
+      padding:12px 20px;border-radius:10px;font-weight:700;text-decoration:none;margin-top:16px}
     .muted{color:#888;font-size:.95rem}
     .gallery{display:flex;gap:12px;flex-wrap:wrap}
     .gallery img{width:calc(33% - 8px);border-radius:10px}
@@ -62,8 +64,10 @@
     <div class="container">
       <h2>프로젝트 스토리</h2>
       <p id="project-story" class="muted">스토리 내용이 여기에 표시됩니다.</p>
+
       <h2>구조/치료 현황</h2>
       <div class="gallery" id="project-gallery"></div>
+
       <h2>공유하기</h2>
       <p class="muted">SNS/카카오톡 등을 통해 프로젝트를 공유해 주세요.</p>
     </div>
@@ -75,6 +79,8 @@
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { apiGetProject } from './js/api.js';
+    import { getDownloadURL } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-storage.js";
+    import { storageRef } from './js/firebase.js';
 
     injectLayout();
 
@@ -88,17 +94,25 @@
         if(!p)return;
 
         document.getElementById('project-title').textContent=p.name??'(제목 없음)';
-        document.getElementById('project-image').src=p.representativeImageUrl||p.image||'img/placeholder.svg';
         document.getElementById('goal-amount').textContent=fmt(p.goalAmount);
         document.getElementById('current-amount').textContent=fmt(p.currentAmount||0);
         document.getElementById('supporter-count').textContent=p.supporterCount??0;
         document.getElementById('progress-bar').style.width=Math.min(100,Math.round((p.currentAmount||0)/p.goalAmount*100))+'%';
-        document.getElementById('status-badge').textContent=(p.status==='approved'?'진행중':'대기중');
+        document.getElementById('status-badge').textContent=(p.adminApproved?'진행중':'대기중');
 
-        if(p.story) document.getElementById('project-story').textContent=p.story;
+        if(p.summary) document.getElementById('project-story').textContent=p.summary;
 
+        if(p.representativeImagePath){
+          try{
+            const url=await getDownloadURL(storageRef(p.representativeImagePath));
+            document.getElementById('project-image').src=url;
+          }catch(e){}
+        }
         if(Array.isArray(p.images)){
-          document.getElementById('project-gallery').innerHTML=p.images.map(src=>`<img src="${src}" alt=""/>`).join('');
+          const gallery=await Promise.all(p.images.map(async path=>{
+            try{return `<img src="${await getDownloadURL(storageRef(path))}" alt=""/>`;}catch(e){return '';}
+          }));
+          document.getElementById('project-gallery').innerHTML=gallery.join('');
         }
       }catch(e){console.error(e);}
     }
