--- a/project_list.html
+++ b/project_list.html
@@ -11,7 +11,7 @@
     :root{
       --ink:#111;
       --sub:#555;
-      --accent:#E87722; /* Pantone 16-1359 */
+      --accent:#E87722; /* 오렌지 포인트 */
       --line:#eaeaea;
       --bg:#fff;
     }
