--- a/project.html
+++ b/project.html
@@ -11,7 +11,7 @@
     :root{
       --ink:#111;
       --sub:#555;
-      --accent:#E87722;
+      --accent:#E87722; /* 오렌지 포인트 */
       --line:#eaeaea;
       --bg:#fff;
     }
@@ -34,7 +34,7 @@
       padding:12px 20px;border-radius:10px;font-weight:700;text-decoration:none;margin-top:16px}
     .muted{color:#888;font-size:.95rem}
     .gallery{display:flex;gap:12px;flex-wrap:wrap}
-    .gallery img{width:calc(33% - 8px);border-radius:10px}
+    .gallery img{width:calc(33% - 8px);border-radius:10px;border:1px solid #ddd}
     @media(max-width:768px){
       .stats{flex-direction:column;gap:8px}
       .gallery img{width:100%}
