--- a/project.html
+++ b/project.html
@@ -1,122 +1,106 @@
 <!doctype html>
 <html lang="ko">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>프로젝트 상세 - Project.PAW</title>
-  <link rel="stylesheet" href="common.css"/>
-  <link rel="stylesheet" href="app.min.css"/>
-  <link href="https://cdn.jsdelivr.net/gh/sunn-us/SUIT/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
-  <style>
-    :root{
-      --ink:#111;
-      --sub:#555;
-      --accent:#E87722; /* 오렌지 포인트 */
-      --line:#eaeaea;
-      --bg:#fff;
-    }
-    body{margin:0;background:var(--bg);color:var(--ink);font-family:'SUIT Variable','Pretendard',sans-serif}
-    .container{max-width:960px;margin:0 auto;padding:0 20px}
-    section{padding:48px 0}
-
-    h1{font-size:2rem;font-weight:900;margin:20px 0;color:var(--ink)}
-    h2{font-size:1.3rem;font-weight:800;margin:32px 0 16px;color:var(--ink)}
-
-    .hero{text-align:center;padding:40px 0}
-    .hero img{max-width:100%;border-radius:16px;margin-bottom:20px}
-    .badge{display:inline-block;background:var(--accent);color:#fff;
-      padding:6px 12px;border-radius:8px;font-size:.9rem;font-weight:600;margin-bottom:12px}
-    .progress{background:#eee;border-radius:6px;overflow:hidden;height:12px;margin:16px 0}
-    .progress .bar{background:var(--accent);height:100%}
-    .stats{display:flex;justify-content:space-between;font-size:.95rem;color:var(--sub);margin-bottom:18px}
-    .stats span strong{font-size:1.15rem;font-weight:800;color:var(--ink);margin-left:4px}
-    .btn-primary{display:inline-block;background:var(--accent);color:#fff;
-      padding:12px 20px;border-radius:10px;font-weight:700;text-decoration:none;margin-top:16px}
-    .muted{color:#888;font-size:.95rem}
-    .gallery{display:flex;gap:12px;flex-wrap:wrap}
-    .gallery img{width:calc(33% - 8px);border-radius:10px;border:1px solid #ddd}
-    @media(max-width:768px){
-      .stats{flex-direction:column;gap:8px}
-      .gallery img{width:100%}
-    }
-  </style>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<title>프로젝트 상세</title>
+<link rel="stylesheet" href="common.css"/>
+<link rel="stylesheet" href="app.min.css"/>
+<style>
+  .hero{text-align:center;padding:30px 16px}
+  .hero h1{margin:0 0 10px;font-size:1.8rem;font-weight:800}
+  .badge{display:inline-block;padding:6px 12px;border-radius:8px;background:#A47864;color:#fff;font-size:.9rem;font-weight:600;margin-bottom:10px}
+  .progress{background:#eee;border-radius:6px;overflow:hidden;height:10px;margin:16px 0}
+  .progress .bar{background:#A47864;height:100%}
+  .stats{display:flex;justify-content:space-between;font-size:.9rem;color:#666;margin-bottom:18px}
+  .stats span strong{font-size:1.1rem;font-weight:800;color:#111;margin-left:4px}
+  .gallery{display:flex;flex-wrap:wrap;gap:10px}
+  .gallery img{width:calc(33% - 8px);border-radius:10px;border:1px solid #ddd}
+  @media(max-width:760px){
+    .gallery img{width:100%}
+  }
+</style>
 </head>
 <body>
-  <!-- header include -->
   <div data-include="header"></div>
 
-  <section class="hero">
-    <div class="container">
-      <span class="badge" id="status-badge">진행중</span>
-      <h1 id="project-title">프로젝트 제목</h1>
-      <img id="project-image" src="img/placeholder.svg" alt="대표 이미지"/>
-      <div class="progress"><div class="bar" id="progress-bar" style="width:0%"></div></div>
+  <main class="container" style="padding:24px 16px">
+    <section class="hero">
+      <span id="status" class="badge">상태</span>
+      <h1 id="title">제목</h1>
+      <img id="cover" src="img/placeholder.svg" alt="대표 이미지" style="max-width:100%;border-radius:16px;margin:16px 0"/>
+      <div class="progress"><div id="progress-bar" class="bar" style="width:0%"></div></div>
       <div class="stats">
-        <span>목표<strong id="goal-amount">0</strong>원</span>
-        <span>달성<strong id="current-amount">0</strong>원</span>
-        <span>참여자<strong id="supporter-count">0</strong>명</span>
+        <span>목표 <strong id="goal">0</strong>원</span>
+        <span>달성 <strong id="current">0</strong>원</span>
+        <span>참여자 <strong id="supporters">0</strong>명</span>
       </div>
-      <a href="#" class="btn-primary">후원하기</a>
-    </div>
-  </section>
+    </section>
 
-  <section>
-    <div class="container">
-      <h2>프로젝트 스토리</h2>
-      <p id="project-story" class="muted">스토리 내용이 여기에 표시됩니다.</p>
+    <section>
+      <h2>프로젝트 소개</h2>
+      <p id="summary"></p>
+      <p id="description"></p>
+    </section>
 
-      <h2>구조/치료 현황</h2>
-      <div class="gallery" id="project-gallery"></div>
+    <section>
+      <h2>사진</h2>
+      <div id="gallery" class="gallery"></div>
+    </section>
+  </main>
 
-      <h2>공유하기</h2>
-      <p class="muted">SNS/카카오톡 등을 통해 프로젝트를 공유해 주세요.</p>
-    </div>
-  </section>
-
-  <!-- footer include -->
   <div data-include="footer"></div>
 
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { apiGetProject } from './js/api.js';
-    import { getDownloadURL } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-storage.js";
-    import { storageRef } from './js/firebase.js';
+    import { storage } from './js/firebase.js';
+    import { ref, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-storage.js";
 
     injectLayout();
 
-    const params=new URLSearchParams(location.search);
-    const id=params.get('id');
-    const fmt=n=>Number(n||0).toLocaleString('ko-KR');
+    const fmt = n => Number(n||0).toLocaleString('ko-KR');
 
-    async function render(){
+    async function load(){
+      const params = new URLSearchParams(location.search);
+      const id = params.get('id');
+      if(!id) return;
+
       try{
-        const p=await apiGetProject(id);
-        if(!p)return;
+        const p = await apiGetProject(id);
+        if(!p) return;
 
-        document.getElementById('project-title').textContent=p.name??'(제목 없음)';
-        document.getElementById('goal-amount').textContent=fmt(p.goalAmount);
-        document.getElementById('current-amount').textContent=fmt(p.currentAmount||0);
-        document.getElementById('supporter-count').textContent=p.supporterCount??0;
-        document.getElementById('progress-bar').style.width=Math.min(100,Math.round((p.currentAmount||0)/p.goalAmount*100))+'%';
-        document.getElementById('status-badge').textContent=(p.adminApproved?'진행중':'대기중');
-
-        if(p.summary) document.getElementById('project-story').textContent=p.summary;
+        document.getElementById('title').textContent = p.name ?? '(제목 없음)';
+        document.getElementById('summary').textContent = p.summary ?? '';
+        document.getElementById('description').textContent = p.description ?? '';
+        document.getElementById('goal').textContent = fmt(p.goalAmount);
+        document.getElementById('current').textContent = fmt(p.currentAmount||0);
+        document.getElementById('supporters').textContent = p.supporterCount ?? 0;
+        document.getElementById('progress-bar').style.width = Math.min(100, Math.round((p.currentAmount||0)/p.goalAmount*100))+'%';
+        document.getElementById('status').textContent = p.adminApproved ? '진행중' : '대기중';
 
         if(p.representativeImagePath){
           try{
-            const url=await getDownloadURL(storageRef(p.representativeImagePath));
-            document.getElementById('project-image').src=url;
-          }catch(e){}
+            const url = await getDownloadURL(ref(storage, p.representativeImagePath));
+            document.getElementById('cover').src = url;
+          }catch(e){console.warn(e);}
         }
+
         if(Array.isArray(p.images)){
-          const gallery=await Promise.all(p.images.map(async path=>{
-            try{return `<img src="${await getDownloadURL(storageRef(path))}" alt=""/>`;}catch(e){return '';}
-          }));
-          document.getElementById('project-gallery').innerHTML=gallery.join('');
+          const gallery = document.getElementById('gallery');
+          for(const path of p.images){
+            try{
+              const url = await getDownloadURL(ref(storage, path));
+              const img = document.createElement('img');
+              img.src = url;
+              gallery.appendChild(img);
+            }catch(e){console.warn(e);}
+          }
         }
       }catch(e){console.error(e);}
     }
-    render();
+
+    load();
   </script>
 </body>
 </html>
